--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "bootstrap": "^4.1.3",
+    "formik": "^1.3.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
+  }
 }
