--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cabbie-sync": "^0.12.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
@@ -24,8 +25,13 @@
   ],
   "devDependencies": {
     "bootstrap": "^4.1.3",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "formik": "^1.3.1",
+    "react-addons-test-utils": "^15.6.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-router-enzyme-context": "^1.2.0",
+    "react-test-renderer": "^16.5.2"
   }
 }
